kubernetes/apps/external-services/olsson/app/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: olsson
  namespace: external-services
  labels:
    kubernetes.io/service-name: olsson
addressType: IPv4
ports:
  - name: http
    port: 8088
    protocol: TCP
endpoints:
  - addresses:
      # External service reachable by IP only (no FQDN yet)
      - 192.168.1.141
