kubernetes/apps/external-services/olsson/app/httproute-public.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: olsson-public
  namespace: external-services
spec:
  parentRefs:
    - name: envoy-gateway-public
      namespace: network
      sectionName: https
  hostnames:
    - olssonparts.aperture.se
  rules:
    - name: default
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: olsson
          port: 8088
